# cellular_automaton

./: CMakeLists.txt  README.md  main.cpp
include/: grid.h  sfml_renderer.h
